<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountPage">


    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:hint = "Meet your new roommates, on your terms"
        android:textSize = "25dp"
        android:textColorHint="@color/white"
        android:background="@color/light_orange"
        android:focusable = "true"
        android:layout_marginTop = "50dp"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/createAccountEmail"
        android:hint = "Email"
        android:focusable = "true"
        android:layout_marginTop = "200dp"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountName"
        android:layout_below="@+id/createAccountEmail"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createAccountEmail"
        android:hint="Name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/createAccountPassword"
        android:layout_below="@+id/createAccountName"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createAccountEmail"
        android:hint="Password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/createAccountConfirmPassword"
        android:layout_below="@+id/createAccountPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createAccountEmail"
        android:hint="Confirm Password"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="choose profile picture"
        android:id="@+id/createAccountPicture"
        android:onClick="uploadPicture"
        android:layout_below="@+id/createAccountConfirmPassword"
        android:backgroundTint = "@color/lb_grey"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="10dp"
        android:id="@+id/createAccountError"
        android:layout_below="@+id/createAccountPicture"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/createAccountEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="create account"
        android:id="@+id/createAccountButton"
        android:onClick="createAccount"
        android:layout_below="@+id/createAccountError" />

</RelativeLayout>